--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2,6 +2,14 @@
 body {
   background-color: black;
 }
+
+h1 {
+  border-radius: 25px;
+  background: #4E4A49;
+  padding: 20px;
+}
+
+
 * {
   color: #E7DFDD;
   font-family: arial,sans-serif;
