--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,16 +1,32 @@
+* {
+  color: #E7DFDD;
+  font-weight: normal;
+  font-family: garamond,serif;
+  line-height: 1.0
+}
 
 body {
   background-color: black;
+  font-size: 12px;
 }
 
 h1 {
-  border-radius: 25px;
-  background: #4E4A49;
-  padding: 20px;
+  font-weight:normal;
+  font-size: 20px;
 }
 
+h2 {
+  font-weight:normal;
+  font-size: 16px;
+}
 
-* {
-  color: #E7DFDD;
-  font-family: arial,sans-serif;
+h3 {
+  font-weight:normal;
+  font-size: 14px;
+}
+
+.boxed {
+  border-radius: 15px;
+  background: #4E4A49;
+  padding: 10;
 }
