--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,8 +1,14 @@
 * {
   color: #E7DFDD;
   font-weight: normal;
-  font-family: garamond,serif;
-  line-height: 1.0
+  font-family: Bodoni MT,sans-serif;
+  line-height: 1.21;
+  letter-spacing: 0.3px;
+}
+
+p {
+  margin-top: 20px;
+  font-style: normal;
 }
 
 body {
@@ -16,17 +22,28 @@ h1 {
 }
 
 h2 {
-  font-weight:normal;
+  margin-top: 40px;
+  font-weight: bold;
   font-size: 16px;
 }
 
 h3 {
+  font-style: italic;
+  margin-top: 12px;
   font-weight:normal;
   font-size: 14px;
 }
 
+ul {
+  text-indent: 0px;
+  margin-left: -15px;
+  margin-top: -10px;
+}
+
 .boxed {
-  border-radius: 15px;
+  border-radius: 0px;
   background: #4E4A49;
-  padding: 10;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
 }
