--- a/docs/styles.css
+++ b/docs/styles.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 h2 {
-  margin-top: 40px;
+  margin-top: 20px;
   font-weight: bold;
   font-size: 16px;
 }
@@ -40,7 +40,7 @@ ul {
   margin-top: -10px;
 }
 
-.boxed {
+h1, h2 {
   border-radius: 0px;
   background: #4E4A49;
   padding-left: 5px;
