--- a/docs/styles.css
+++ b/docs/styles.css
@@ -10,7 +10,8 @@ i {
 }
 
 .logoimage {
-  margin: 0px;
+  margin-left: 0%;
+  margin-right: 0%;
   max-width: 100%;
   margin-bottom: -25px;
   z-index: 10;
@@ -45,9 +46,11 @@ p {
 
 body {
   background-color: rgb(180, 171, 162);
-  font-size: 11px;
+  font-size: 10px;
   font-weight:normal;
 }
+
+
 
 h1 {
   font-size: 20px;
@@ -90,4 +93,27 @@ h1, h2 {
   background: #746e6c;
   padding: 5px 5px 2px 5px;
     border-radius:5px;
+}
+
+
+@media (max-width: 479px) {
+    body {
+        font-size: 18px;
+    }
+    h1 {
+        font-size: 32px;
+    }
+    h2 {
+        font-size: 24px;
+    }
+    h3 {
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .logoimage{
+          margin-left: -50%;
+            margin-right: -50%;
+            max-width: 200%;
+
+    }
 }
