--- a/docs/styles.css
+++ b/docs/styles.css
@@ -10,9 +10,9 @@ i {
 }
 
 .logoimage {
-  margin-left: 0%;
-  margin-right: 0%;
-  max-width: 100%;
+  margin-left: 10%;
+  margin-right: 10%;
+  max-width: 80%;
   margin-bottom: -25px;
   z-index: 10;
 }
@@ -46,23 +46,23 @@ p {
 
 body {
   background-color: rgb(180, 171, 162);
-  font-size: 10px;
+  font-size: 16px;
   font-weight:normal;
 }
 
 
 
 h1 {
-  font-size: 20px;
+  font-size: 40px;
 }
 
 h2 {
-  margin-top: 20px;
-  font-size: 16px;
+  margin-top: 36px;
+  font-size: 32px;
 }
 
 .daviddeluca {
-  font-size: 45px;
+  font-size: 46px;
   letter-spacing: 10px;
   margin: auto;
   width: 75vw;
@@ -80,7 +80,7 @@ h3 {
   font-style: italic;
   margin-top: 12px;
   font-weight:normal;
-  font-size: 14px;
+  font-size: 24px;
 }
 
 ul {
@@ -96,9 +96,12 @@ h1, h2 {
 }
 
 
-@media (max-width: 800px) {
-    body {
+@media only screen and (max-width: 1080px) {
+    p, body {
         font-size: 18px;
+        line-height: 1.6;
+        margin:10px;
+        padding: 10px;
     }
     h1 {
         font-size: 32px;
@@ -110,10 +113,19 @@ h1, h2 {
         font-size: 20px;
         font-weight: bold;
     }
-    .logoimage{
-          margin-left: -50%;
-            margin-right: -50%;
-            max-width: 200%;
+    .logoimage {
+        margin-left: -35%;
+        margin-right: -35%;
+        max-width: 170%;
 
+    }
+
+    .bigbox, h1, h2, .storycontent, .card {
+        border-radius:15px;
+    }
+
+    h1, h2 {
+        padding: 10px;
+        padding-left: 20px;
     }
 }
