--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,7 +1,7 @@
 * {
   color: #201d1d;
   font-weight: normal;
-  font-family: Roboto,sans-serif;
+  font-family: Roboto, sans-serif;
   letter-spacing: 0.3px;
 }
 
@@ -18,24 +18,24 @@ i {
 }
 
 .bigbox {
-    margin: 10px 10px 10px 10px;
-    border-radius:5px;
+  margin: 10px 10px 10px 10px;
+  border-radius: 5px;
 }
 
-.storycontent, .card {
-    background-color:rgb(199, 190, 182);
-    margin: 4px;
-    padding: 10px;
-    border-radius:5px;
+.storycontent,
+.card {
+  background-color: rgb(199, 190, 182);
+  margin: 4px;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 .shadow {
-    box-shadow: 2px 2px 4px 0 rgb(124, 118, 111);
+  box-shadow: 2px 2px 4px 0 rgb(124, 118, 111);
 }
 
-
 h1.storytitle {
-    margin: 4px;
+  margin: 4px;
 }
 
 p {
@@ -47,10 +47,8 @@ p {
 body {
   background-color: rgb(180, 171, 162);
   font-size: 16px;
-  font-weight:normal;
+  font-weight: normal;
 }
-
-
 
 h1 {
   font-size: 40px;
@@ -69,17 +67,23 @@ h2 {
   text-align: center;
 }
 
-hr {
-    border-color: rgb(124, 118, 111);
-    margin: 20px;
-    padding:0px;
+.main {
+  width: 100%;
+  margin: 0 auto;
+  overflow:visible;
+  position: relative;
 }
 
+hr {
+  border-color: rgb(124, 118, 111);
+  margin: 20px;
+  padding: 0px;
+}
 
 h3 {
   font-style: italic;
   margin-top: 12px;
-  font-weight:normal;
+  font-weight: normal;
   font-size: 24px;
 }
 
@@ -89,49 +93,55 @@ ul {
   margin-top: -10px;
 }
 
-h1, h2 {
+h1,
+h2 {
   background: #746e6c;
   padding: 5px 5px 2px 5px;
-    border-radius:5px;
+  border-radius: 5px;
 }
 
-
 @media only screen and (max-width: 1080px) {
-    p, body {
-        font-size: 18px;
-        line-height: 1.6;
-        margin:10px;
-        padding: 10px;
-    }
-    h1 {
-        font-size: 32px;
-    }
-    h2 {
-        font-size: 24px;
-    }
-    h3 {
-        font-size: 20px;
-        font-weight: bold;
-    }
-    .daviddeluca {
-        font-size: 50px;
-    }
-    ul{
-        margin-left:0px;
-    }
-    .logoimage {
-        margin-left: -35%;
-        margin-right: -35%;
-        max-width: 170%;
+  p,
+  body {
+    font-size: 18px;
+    line-height: 1.6;
+    margin: 10px;
+    padding: 10px;
+  }
+  h1 {
+    font-size: 32px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  h3 {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .daviddeluca {
+    font-size: 50px;
+  }
+  ul {
+    margin-left: 0px;
+  }
+  .logoimage {
+    margin-left: -35%;
+    margin-right: -35%;
+    max-width: 170%;
+    display: block;
+  }
 
-    }
+  .bigbox,
+  h1,
+  h2,
+  .storycontent,
+  .card {
+    border-radius: 15px;
+  }
 
-    .bigbox, h1, h2, .storycontent, .card {
-        border-radius:15px;
-    }
-
-    h1, h2 {
-        padding: 10px;
-        padding-left: 20px;
-    }
+  h1,
+  h2 {
+    padding: 10px;
+    padding-left: 20px;
+  }
 }
