--- a/docs/styles.css
+++ b/docs/styles.css
@@ -10,10 +10,12 @@ i {
 }
 
 .logoimage {
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 80%;
+  max-height:400px;
   margin-bottom: -25px;
+  text-align: center;
   z-index: 10;
 }
 
@@ -125,10 +127,10 @@ h2 {
     margin-left: 0px;
   }
   .logoimage {
-    margin-left: -35%;
-    margin-right: -35%;
-    max-width: 170%;
-    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -10px;
+    max-width: 100%;
   }
 
   .bigbox,
